sphinx_syntax/ext/syntax/gen/BisonParser.py
# Generated from BisonParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class BisonParser ( Parser ):

    grammarFileName = "BisonParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'%%'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'%?{'", "'<'", "'%empty'", "'%prec'", "'%dprec'", 
                     "'%merge'", "'%expect'", "'%expect-rr'", "<INVALID>", 
                     "';'", "'['", "']'", "'|'", "'->'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'}'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'>'" ]

    symbolicNames = [ "<INVALID>", "BEGIN_RULES", "PROLOGUE", "PREQUEL_TOKEN_OPTION", 
                      "PREQUEL_TOKEN", "UNTERMINATED_PREQUEL_TOKEN", "BEGIN_PREQUEL_OPTION", 
                      "DOC_COMMENT", "HEADER", "BLOCK_COMMENT", "LINE_COMMENT", 
                      "WS", "ERRCHAR", "INT", "STRING_LITERAL", "UNTERMINATED_STRING_LITERAL", 
                      "BEGIN_ACTION", "BEGIN_PREDICATE", "BEGIN_TAG", "EMPTY", 
                      "PREC", "DPREC", "MERGE", "EXPECT", "EXPECT_RR", "COLON", 
                      "SEMI", "LBRACK", "RBRACK", "OR", "RETURN", "ID", 
                      "EPILOGUE", "MAIN_WS", "PREQUEL_OPTION_NESTED_ACTION", 
                      "PREQUEL_OPTION_ESCAPE", "PREQUEL_OPTION_STRING_LITERAL", 
                      "PREQUEL_OPTION_CHAR_LITERAL", "PREQUEL_OPTION_LIFETIME_LITERAL", 
                      "PREQUEL_OPTION_S_STRING_LITERAL", "PREQUEL_OPTION_BLOCK_COMMENT", 
                      "PREQUEL_OPTION_LINE_COMMENT", "END_PREQUEL_OPTION", 
                      "UNTERMINATED_PREQUEL_OPTION", "PREQUEL_OPTION_CONTENT", 
                      "ACTION_ESCAPE", "ACTION_STRING_LITERAL", "ACTION_CHAR_LITERAL", 
                      "ACTION_LIFETIME_LITERAL", "ACTION_S_STRING_LITERAL", 
                      "ACTION_BLOCK_COMMENT", "ACTION_LINE_COMMENT", "END_ACTION", 
                      "UNTERMINATED_ACTION", "ACTION_CONTENT", "TAG_ESCAPE", 
                      "TAG_STRING_LITERAL", "TAG_CHAR_LITERAL", "TAG_LIFETIME_LITERAL", 
                      "TAG_S_STRING_LITERAL", "TAG_BLOCK_COMMENT", "TAG_LINE_COMMENT", 
                      "END_TAG", "UNTERMINATED_TAG", "TAG_CONTENT", "RETURN_TYPE_ESCAPE", 
                      "RETURN_TYPE_STRING_LITERAL", "RETURN_TYPE_CHAR_LITERAL", 
                      "RETURN_TYPE_LIFETIME_LITERAL", "RETURN_TYPE_S_STRING_LITERAL", 
                      "RETURN_TYPE_BLOCK_COMMENT", "RETURN_TYPE_LINE_COMMENT", 
                      "UNTERMINATED_RETURN_TYPE", "RETURN_TYPE_CONTENT" ]

    RULE_grammarSpec = 0
    RULE_prequelConstruct = 1
    RULE_prequelConstructDoc = 2
    RULE_prequelConstructHeader = 3
    RULE_prequelConstructToken = 4
    RULE_actionBlock = 5
    RULE_predicateBlock = 6
    RULE_rules = 7
    RULE_ruleSpec = 8
    RULE_ruleReturn = 9
    RULE_nameRef = 10
    RULE_ruleBlock = 11
    RULE_ruleAltList = 12
    RULE_alternative = 13
    RULE_element = 14
    RULE_symbol = 15
    RULE_tag = 16

    ruleNames =  [ "grammarSpec", "prequelConstruct", "prequelConstructDoc", 
                   "prequelConstructHeader", "prequelConstructToken", "actionBlock", 
                   "predicateBlock", "rules", "ruleSpec", "ruleReturn", 
                   "nameRef", "ruleBlock", "ruleAltList", "alternative", 
                   "element", "symbol", "tag" ]

    EOF = Token.EOF
    BEGIN_RULES=1
    PROLOGUE=2
    PREQUEL_TOKEN_OPTION=3
    PREQUEL_TOKEN=4
    UNTERMINATED_PREQUEL_TOKEN=5
    BEGIN_PREQUEL_OPTION=6
    DOC_COMMENT=7
    HEADER=8
    BLOCK_COMMENT=9
    LINE_COMMENT=10
    WS=11
    ERRCHAR=12
    INT=13
    STRING_LITERAL=14
    UNTERMINATED_STRING_LITERAL=15
    BEGIN_ACTION=16
    BEGIN_PREDICATE=17
    BEGIN_TAG=18
    EMPTY=19
    PREC=20
    DPREC=21
    MERGE=22
    EXPECT=23
    EXPECT_RR=24
    COLON=25
    SEMI=26
    LBRACK=27
    RBRACK=28
    OR=29
    RETURN=30
    ID=31
    EPILOGUE=32
    MAIN_WS=33
    PREQUEL_OPTION_NESTED_ACTION=34
    PREQUEL_OPTION_ESCAPE=35
    PREQUEL_OPTION_STRING_LITERAL=36
    PREQUEL_OPTION_CHAR_LITERAL=37
    PREQUEL_OPTION_LIFETIME_LITERAL=38
    PREQUEL_OPTION_S_STRING_LITERAL=39
    PREQUEL_OPTION_BLOCK_COMMENT=40
    PREQUEL_OPTION_LINE_COMMENT=41
    END_PREQUEL_OPTION=42
    UNTERMINATED_PREQUEL_OPTION=43
    PREQUEL_OPTION_CONTENT=44
    ACTION_ESCAPE=45
    ACTION_STRING_LITERAL=46
    ACTION_CHAR_LITERAL=47
    ACTION_LIFETIME_LITERAL=48
    ACTION_S_STRING_LITERAL=49
    ACTION_BLOCK_COMMENT=50
    ACTION_LINE_COMMENT=51
    END_ACTION=52
    UNTERMINATED_ACTION=53
    ACTION_CONTENT=54
    TAG_ESCAPE=55
    TAG_STRING_LITERAL=56
    TAG_CHAR_LITERAL=57
    TAG_LIFETIME_LITERAL=58
    TAG_S_STRING_LITERAL=59
    TAG_BLOCK_COMMENT=60
    TAG_LINE_COMMENT=61
    END_TAG=62
    UNTERMINATED_TAG=63
    TAG_CONTENT=64
    RETURN_TYPE_ESCAPE=65
    RETURN_TYPE_STRING_LITERAL=66
    RETURN_TYPE_CHAR_LITERAL=67
    RETURN_TYPE_LIFETIME_LITERAL=68
    RETURN_TYPE_S_STRING_LITERAL=69
    RETURN_TYPE_BLOCK_COMMENT=70
    RETURN_TYPE_LINE_COMMENT=71
    UNTERMINATED_RETURN_TYPE=72
    RETURN_TYPE_CONTENT=73

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class GrammarSpecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BEGIN_RULES(self):
            return self.getToken(BisonParser.BEGIN_RULES, 0)

        def rules(self):
            return self.getTypedRuleContext(BisonParser.RulesContext,0)


        def EOF(self):
            return self.getToken(BisonParser.EOF, 0)

        def prequelConstruct(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BisonParser.PrequelConstructContext)
            else:
                return self.getTypedRuleContext(BisonParser.PrequelConstructContext,i)


        def getRuleIndex(self):
            return BisonParser.RULE_grammarSpec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGrammarSpec" ):
                listener.enterGrammarSpec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGrammarSpec" ):
                listener.exitGrammarSpec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGrammarSpec" ):
                return visitor.visitGrammarSpec(self)
            else:
                return visitor.visitChildren(self)




    def grammarSpec(self):

        localctx = BisonParser.GrammarSpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_grammarSpec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 460) != 0):
                self.state = 34
                self.prequelConstruct()
                self.state = 39
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 40
            self.match(BisonParser.BEGIN_RULES)
            self.state = 41
            self.rules()
            self.state = 42
            self.match(BisonParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrequelConstructContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROLOGUE(self):
            return self.getToken(BisonParser.PROLOGUE, 0)

        def BEGIN_PREQUEL_OPTION(self):
            return self.getToken(BisonParser.BEGIN_PREQUEL_OPTION, 0)

        def END_PREQUEL_OPTION(self):
            return self.getToken(BisonParser.END_PREQUEL_OPTION, 0)

        def actionBlock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BisonParser.ActionBlockContext)
            else:
                return self.getTypedRuleContext(BisonParser.ActionBlockContext,i)


        def prequelConstructToken(self):
            return self.getTypedRuleContext(BisonParser.PrequelConstructTokenContext,0)


        def prequelConstructDoc(self):
            return self.getTypedRuleContext(BisonParser.PrequelConstructDocContext,0)


        def prequelConstructHeader(self):
            return self.getTypedRuleContext(BisonParser.PrequelConstructHeaderContext,0)


        def getRuleIndex(self):
            return BisonParser.RULE_prequelConstruct

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrequelConstruct" ):
                listener.enterPrequelConstruct(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrequelConstruct" ):
                listener.exitPrequelConstruct(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrequelConstruct" ):
                return visitor.visitPrequelConstruct(self)
            else:
                return visitor.visitChildren(self)




    def prequelConstruct(self):

        localctx = BisonParser.PrequelConstructContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_prequelConstruct)
        self._la = 0 # Token type
        try:
            self.state = 56
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 44
                self.match(BisonParser.PROLOGUE)
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 45
                self.match(BisonParser.BEGIN_PREQUEL_OPTION)
                self.state = 49
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==16:
                    self.state = 46
                    self.actionBlock()
                    self.state = 51
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 52
                self.match(BisonParser.END_PREQUEL_OPTION)
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 3)
                self.state = 53
                self.prequelConstructToken()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 4)
                self.state = 54
                self.prequelConstructDoc()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 5)
                self.state = 55
                self.prequelConstructHeader()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrequelConstructDocContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.doc = None # type: Token

        def DOC_COMMENT(self):
            return self.getToken(BisonParser.DOC_COMMENT, 0)

        def getRuleIndex(self):
            return BisonParser.RULE_prequelConstructDoc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrequelConstructDoc" ):
                listener.enterPrequelConstructDoc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrequelConstructDoc" ):
                listener.exitPrequelConstructDoc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrequelConstructDoc" ):
                return visitor.visitPrequelConstructDoc(self)
            else:
                return visitor.visitChildren(self)




    def prequelConstructDoc(self):

        localctx = BisonParser.PrequelConstructDocContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_prequelConstructDoc)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            localctx.doc = self.match(BisonParser.DOC_COMMENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrequelConstructHeaderContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.header = None # type: Token

        def HEADER(self):
            return self.getToken(BisonParser.HEADER, 0)

        def getRuleIndex(self):
            return BisonParser.RULE_prequelConstructHeader

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrequelConstructHeader" ):
                listener.enterPrequelConstructHeader(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrequelConstructHeader" ):
                listener.exitPrequelConstructHeader(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrequelConstructHeader" ):
                return visitor.visitPrequelConstructHeader(self)
            else:
                return visitor.visitChildren(self)




    def prequelConstructHeader(self):

        localctx = BisonParser.PrequelConstructHeaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_prequelConstructHeader)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            localctx.header = self.match(BisonParser.HEADER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrequelConstructTokenContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # type: Token
            self._PREQUEL_TOKEN = None # type: Token
            self.tokens = list() # type: list[Token]

        def PREQUEL_TOKEN_OPTION(self):
            return self.getToken(BisonParser.PREQUEL_TOKEN_OPTION, 0)

        def PREQUEL_TOKEN(self, i:int=None):
            if i is None:
                return self.getTokens(BisonParser.PREQUEL_TOKEN)
            else:
                return self.getToken(BisonParser.PREQUEL_TOKEN, i)

        def getRuleIndex(self):
            return BisonParser.RULE_prequelConstructToken

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrequelConstructToken" ):
                listener.enterPrequelConstructToken(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrequelConstructToken" ):
                listener.exitPrequelConstructToken(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrequelConstructToken" ):
                return visitor.visitPrequelConstructToken(self)
            else:
                return visitor.visitChildren(self)




    def prequelConstructToken(self):

        localctx = BisonParser.PrequelConstructTokenContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_prequelConstructToken)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            localctx.name = self.match(BisonParser.PREQUEL_TOKEN_OPTION)
            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 63
                localctx._PREQUEL_TOKEN = self.match(BisonParser.PREQUEL_TOKEN)
                localctx.tokens.append(localctx._PREQUEL_TOKEN)
                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ActionBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BEGIN_ACTION(self):
            return self.getToken(BisonParser.BEGIN_ACTION, 0)

        def END_ACTION(self):
            return self.getToken(BisonParser.END_ACTION, 0)

        def actionBlock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BisonParser.ActionBlockContext)
            else:
                return self.getTypedRuleContext(BisonParser.ActionBlockContext,i)


        def getRuleIndex(self):
            return BisonParser.RULE_actionBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterActionBlock" ):
                listener.enterActionBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitActionBlock" ):
                listener.exitActionBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitActionBlock" ):
                return visitor.visitActionBlock(self)
            else:
                return visitor.visitChildren(self)




    def actionBlock(self):

        localctx = BisonParser.ActionBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_actionBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(BisonParser.BEGIN_ACTION)
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==16:
                self.state = 70
                self.actionBlock()
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 76
            self.match(BisonParser.END_ACTION)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PredicateBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BEGIN_PREDICATE(self):
            return self.getToken(BisonParser.BEGIN_PREDICATE, 0)

        def END_ACTION(self):
            return self.getToken(BisonParser.END_ACTION, 0)

        def actionBlock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BisonParser.ActionBlockContext)
            else:
                return self.getTypedRuleContext(BisonParser.ActionBlockContext,i)


        def getRuleIndex(self):
            return BisonParser.RULE_predicateBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPredicateBlock" ):
                listener.enterPredicateBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPredicateBlock" ):
                listener.exitPredicateBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPredicateBlock" ):
                return visitor.visitPredicateBlock(self)
            else:
                return visitor.visitChildren(self)




    def predicateBlock(self):

        localctx = BisonParser.PredicateBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_predicateBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(BisonParser.BEGIN_PREDICATE)
            self.state = 82
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==16:
                self.state = 79
                self.actionBlock()
                self.state = 84
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 85
            self.match(BisonParser.END_ACTION)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RulesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ruleSpec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BisonParser.RuleSpecContext)
            else:
                return self.getTypedRuleContext(BisonParser.RuleSpecContext,i)


        def getRuleIndex(self):
            return BisonParser.RULE_rules

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRules" ):
                listener.enterRules(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRules" ):
                listener.exitRules(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRules" ):
                return visitor.visitRules(self)
            else:
                return visitor.visitChildren(self)




    def rules(self):

        localctx = BisonParser.RulesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_rules)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2147484032) != 0):
                self.state = 87
                self.ruleSpec()
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RuleSpecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._HEADER = None # type: Token
            self.headers = list() # type: list[Token]
            self._DOC_COMMENT = None # type: Token
            self.docs = list() # type: list[Token]
            self.name = None # type: Token

        def COLON(self):
            return self.getToken(BisonParser.COLON, 0)

        def ruleBlock(self):
            return self.getTypedRuleContext(BisonParser.RuleBlockContext,0)


        def SEMI(self):
            return self.getToken(BisonParser.SEMI, 0)

        def ID(self):
            return self.getToken(BisonParser.ID, 0)

        def nameRef(self):
            return self.getTypedRuleContext(BisonParser.NameRefContext,0)


        def ruleReturn(self):
            return self.getTypedRuleContext(BisonParser.RuleReturnContext,0)


        def HEADER(self, i:int=None):
            if i is None:
                return self.getTokens(BisonParser.HEADER)
            else:
                return self.getToken(BisonParser.HEADER, i)

        def DOC_COMMENT(self, i:int=None):
            if i is None:
                return self.getTokens(BisonParser.DOC_COMMENT)
            else:
                return self.getToken(BisonParser.DOC_COMMENT, i)

        def getRuleIndex(self):
            return BisonParser.RULE_ruleSpec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRuleSpec" ):
                listener.enterRuleSpec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRuleSpec" ):
                listener.exitRuleSpec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRuleSpec" ):
                return visitor.visitRuleSpec(self)
            else:
                return visitor.visitChildren(self)




    def ruleSpec(self):

        localctx = BisonParser.RuleSpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_ruleSpec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8:
                self.state = 93
                localctx._HEADER = self.match(BisonParser.HEADER)
                localctx.headers.append(localctx._HEADER)
                self.state = 98
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7:
                self.state = 99
                localctx._DOC_COMMENT = self.match(BisonParser.DOC_COMMENT)
                localctx.docs.append(localctx._DOC_COMMENT)
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 105
            localctx.name = self.match(BisonParser.ID)
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==27:
                self.state = 106
                self.nameRef()


            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==30:
                self.state = 109
                self.ruleReturn()


            self.state = 112
            self.match(BisonParser.COLON)
            self.state = 113
            self.ruleBlock()
            self.state = 114
            self.match(BisonParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RuleReturnContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(BisonParser.RETURN, 0)

        def actionBlock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BisonParser.ActionBlockContext)
            else:
                return self.getTypedRuleContext(BisonParser.ActionBlockContext,i)


        def getRuleIndex(self):
            return BisonParser.RULE_ruleReturn

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRuleReturn" ):
                listener.enterRuleReturn(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRuleReturn" ):
                listener.exitRuleReturn(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRuleReturn" ):
                return visitor.visitRuleReturn(self)
            else:
                return visitor.visitChildren(self)




    def ruleReturn(self):

        localctx = BisonParser.RuleReturnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_ruleReturn)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(BisonParser.RETURN)
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==16:
                self.state = 117
                self.actionBlock()
                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NameRefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACK(self):
            return self.getToken(BisonParser.LBRACK, 0)

        def ID(self):
            return self.getToken(BisonParser.ID, 0)

        def RBRACK(self):
            return self.getToken(BisonParser.RBRACK, 0)

        def getRuleIndex(self):
            return BisonParser.RULE_nameRef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNameRef" ):
                listener.enterNameRef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNameRef" ):
                listener.exitNameRef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNameRef" ):
                return visitor.visitNameRef(self)
            else:
                return visitor.visitChildren(self)




    def nameRef(self):

        localctx = BisonParser.NameRefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_nameRef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(BisonParser.LBRACK)
            self.state = 124
            self.match(BisonParser.ID)
            self.state = 125
            self.match(BisonParser.RBRACK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RuleBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ruleAltList(self):
            return self.getTypedRuleContext(BisonParser.RuleAltListContext,0)


        def getRuleIndex(self):
            return BisonParser.RULE_ruleBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRuleBlock" ):
                listener.enterRuleBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRuleBlock" ):
                listener.exitRuleBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRuleBlock" ):
                return visitor.visitRuleBlock(self)
            else:
                return visitor.visitChildren(self)




    def ruleBlock(self):

        localctx = BisonParser.RuleBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_ruleBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.ruleAltList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RuleAltListContext(ParserRuleContext):
        __slots__ = 'parser'
